--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
     "@popperjs/core": "^2.5.4",
+    "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "firebase": "^7.24.0",
     "jquery": "^3.5.1",
